# elijah-provisioning

./: .gitignore  NOTICE  README.md  TEMPLATE.qemu  demo.sh  fabfile.py  gateway-config.yaml.example  libvirt-qemu-abstractions  logging.json  nephele.service  orangebox.sh  requirements.txt  setup.py  stream-server.service
android/android/: .classpath
ansible/: client.yml
cloudletfs/: .gitignore  Makefile.am  README.md  configure.ac
cloudletfs/cloudletfs/: bitmap.c  cloudletfs-private.h  cloudletfs.c  cond.c  fuse-image.c  fuse-stats.c  fuse-stream.c  fuse.c  io.c  ll-modified.c  ll-pristine.c  stats.c  stream.c  util.c
elijah/gateway/: __init__.py  lease_parser.py
elijah/provisioning/: .gitignore  Configuration.py  Disk.py  Memory.py  bwpub.py  cloudletfs.py  compression.py  configuration.py  cython_xor.pyx  delta.py  disk.py  ec2_rapid.py  handoff.py  log.py  memory.py  memory_util.py  migration_profile.py  package.py  process_manager.py  progressbar.py  qmp_af_unix.py  server.py  stream_client.py  stream_server.py  synthesis.py  synthesis_client.py  synthesis_protocol.py  tool.py  upnp_server.py  vmnetfs.py  xray.py
elijah/provisioning/config/: VM_TEMPLATE.xml  mode-profile.face  (+1 more)
elijah/test/: test_base_VM.py  test_create_VM_overlay.py  test_handoff.py  test_synthesis.py  util.py
examples/gabriel-lego/: README.md  cloud.cfg  install_and_run.sh  vm.xml
heatmap/: index.html
heatmap/css/: style.css
src/provisioning/: Disk.py  delta.py  log.py  package.py  server.py  synthesis.py  vmnetfs.py
test/: .gitignore
test/adaptation/: mode_test.py  validate_pr.py
test/comp-blob-size/: comp-blob-size.py
test/cpu-time-test/: cpu-time-test.py
test/fluid-bin32/: CREDITS.md  README.md
test/handoff-profiling/: dynamic-cpu-exhaustive.py  dynamic-cpu-test.py  dynamic-network-exhaustive.py  dynamic-network-test.py  exhaustive-test.py  network-test.py  parsing.py  profile_stage.py  traffic_shaping
test/misc/: ec2_rapid.py
test/profiling/: dynamic-cpu-test.py  dynamic-network-test.py  exhaustive-test.py  network-test.py  parsing.py  profile-stage.py  profile_stage.py  traffic_shaping
(+23 files in other folders)
